--- a/src/pug/aboutMe.pug
+++ b/src/pug/aboutMe.pug
@@ -1,6 +1,6 @@
 include mixins
 
-section.about-me
+section#about-me.about-me
 	h2.about-me__title About Me
 	.about-me__body
 		some stuff about me as an artist
