--- a/src/pug/prompts.pug
+++ b/src/pug/prompts.pug
@@ -1,8 +1,20 @@
 include mixins
 
-section.prompts
-	h2 Prompts
-	.prompts__gallery
-		.prompts__gallery-img
-			+ promptCard('10/1', 'some prompt', 'no img', '', 'prompt desc', 'link', 'link label', 'reference img', 'its a reference')
+section#prompts
+	h2 Prompt List
+	.prompt-gallery
+		button.prompt-gallery__btn.prompt-gallery__btn--show
+			.prompt-gallery__btn-icon.prompt-gallery__btn-icon--show
+				span.prompt-gallery__btn-icon-sr eye icon
+			.prompt-gallery__btn-label
+				| Show
+		- var label = "view references"
+		.prompt-gallery__floor.prompt-gallery__floor--hidden
+			each prompt in prompts
+				+ promptCard(prompt.day, prompt.label, prompt.desc, prompt.referenceLink, label, prompt.referenceImg, '' )(id=prompt.cssId class="prompt-card--gallery")
+			button.prompt-gallery__btn.prompt-gallery__btn--hide
+				.prompt-gallery__btn-icon.prompt-gallery__btn-icon--hide
+					span.prompt-gallery__btn-icon-sr eye icon
+				.prompt-gallery__btn-label
+					| Hide
 
