--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -1,10 +1,14 @@
 include mixins
 
-section#about
-	h1 Lobopod-Tober
-	+ promptCard('10/1','prompt', 'img', 'alt')
-	article.about__body
-		h2.about__title Draw a Lobopod every day in October
-		.about__body
-			| Lobopod-tober is a 31 day drawing challenge in the sprite of Draw-tober, and Ink-tober. The challenge is to finish a lobopod drawing everyday in October 2022.
-			| what is a lobopod.
+section.about
+	h1.about__pg-title 
+		span.about__pg-title-sr Lobopod-tober
+		.about__pg-title-logo
+			img.about__pg-title-logo-img(alt="logo" src= "./lobopod_logo_mobile_v1_designed_by_hector_diaz.png")
+		.about__pg-title-suffix -tober
+		small.about__pg-title-clear "Lobopod - tober"
+	article#about.about__article
+		.loading-skeleton
+			h2 Loading ...
+		+ tipCTA("Like the Project?")(class="tip-cta--about")
+	.art-card.art-card--about
