--- a/src/pug/prompts.pug
+++ b/src/pug/prompts.pug
@@ -1,7 +1,7 @@
 include mixins
 
-section#prompts
-	h2 Prompt List
+section#prompts.prompts
+	h2.prompts__title Prompt List
 	.prompt-gallery
 		button.prompt-gallery__btn.prompt-gallery__btn--show
 			.prompt-gallery__btn-icon.prompt-gallery__btn-icon--show
