--- a/src/scss/prompts.scss
+++ b/src/scss/prompts.scss
@@ -3,6 +3,11 @@
 	border-bottom: solid 1px #000;
 	padding-bottom: 30px;
 	margin: 30px 0;
+	&__title {
+		margin: 60px auto 15px auto;
+		max-width: 1200px;
+		width: 100%;
+	}
 }
 
 .prompt-gallery {
