--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -41,3 +41,13 @@
 	margin: 0 auto;
 	max-width: 80%;
 }
+.contact-card,
+.about-me,
+.footer,
+.about {
+	@include mixins.laptop {
+		max-width: 1200px;
+		margin: 0 auto;
+		width: 100%;
+	}
+}
