Split project into two dirs. One for landing page. The other for the game. Also set up dirs for using markdown as my project managment tool

--- a/tober/src/scss/prompt-card.scss
+++ b/tober/src/scss/prompt-card.scss
@@ -18,6 +18,10 @@
 				max-height: 300px;
 				overflow: hidden;
 			}
+			@include mixins.laptop {
+				max-height: none;
+				overflow: auto;
+			}
 		}
 		&__prompt-desc {
 			margin: 15px 0;
