--- a/tober/src/scss/about.scss
+++ b/tober/src/scss/about.scss
@@ -32,7 +32,7 @@
 }
 
 .art-card--about {
-	border-bottom: solid 1px #000;
+	//border-bottom: solid 1px #000;
 	padding: 30px 0;
 	@include mixins.laptop {
 		font-size: 1.5rem;
