--- a/tober/src/scss/prompt-card.scss
+++ b/tober/src/scss/prompt-card.scss
@@ -1,30 +1,67 @@
 @use "mixins";
 .prompt-card {
 	&__title {
+		font-family: mont_heavy;
+		vertical-align: middle;
+		min-height: 55px;
+		font-size: 1rem;
+		margin: 0;
+		@include mixins.tablet {
+			font-size: 1.5rem;
+		}
+		@include mixins.laptop {
+			font-size: 1rem;
+		}
+		@include mixins.desktop {
+			font-size: 1.5rem;
+		}
 		&-date {
-			display: inline-block;
 			padding-right: 20px;
 		}
 		&-prompt {
-			display: inline-block;
+		}
+	}
+	&__view-btn{
+		background-color: transparent;
+		vertical-align: middle;
+		display: inline-block;
+		border-radius: 0;
+		outline: none;
+		border: none;
+	}
+	&--detached {
+		.prompt-card__title {
+			font-size: 2rem;
+			&-date {
+				display: inline-block;
+				vertical-align: top;
+			}
+			&-prompt {
+				display: inline-block;
+				vertical-align: top;
+			}
+
 		}
 	}
 }
 .reference-card--prompt {
 	.reference-card {
 		&__example {
-			margin: 15px 0;
-			@include mixins.tablet {
-				max-height: 300px;
-				overflow: hidden;
-			}
-			@include mixins.laptop {
-				max-height: none;
-				overflow: auto;
+			position: relative;
+			overflow: hidden;
+			height: 150px;
+			&-img {
+				transform: translate(-50%, -50%);
+				position: absolute;
+				object-fit: cover;
+				height: 100%;
+				width: 100%;
+				left: 50%;
+				top: 50%;
 			}
 		}
 		&__prompt-desc {
-			margin: 15px 0;
+			//margin: 15px 0;
 		}
 		&__link {
 			display: inline-block;
