Split the app into the tober landing page and the game. Not sure if it's best practices to have both those sub dirs set up as Node projects. Also add the docker-compose file and symlinked it with the rest of the project. Will need to include some way for others or, myself, to access the dependent files to make this yml work properly.

--- a/game/src/pug/index.pug
+++ b/game/src/pug/index.pug
@@ -1,9 +1,9 @@
 extends ./layout/layout.pug
 block body
 	main.main
-		section.home-view
-			h2.home-view__title home
-			canvas.home-view__canvas
+		section.terrarium
+			h2.terrarium__title home
+			canvas.terrarium__canvas
 
 		section.console
 			h2.console__title console
