--- a/game/src/pug/layout/layout.pug
+++ b/game/src/pug/layout/layout.pug
@@ -5,7 +5,7 @@ html(lang='en')
 		include ./head.pug
 		block head
 		block inlineStyles
-			link(rel="stylesheet" href="/game/dist/style.css")
+			link(rel="stylesheet" href="/style.css")
 			style
 				block styles
 
